Using routines from GMatTensor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -33,7 +33,7 @@ install:
     - conda update -q conda
     - conda info -a
     - conda install -c conda-forge mamba
-    - mamba install -c conda-forge cmake xtensor qpot python-qpot xsimd python numpy pyxtensor catch2 h5py goosefem
+    - mamba install -c conda-forge cmake xtensor qpot python-qpot xsimd python numpy pyxtensor catch2 h5py goosefem gmattensor
     # Build/install the library
     - cmake -G "NMake Makefiles" -DCMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DCMAKE_BUILD_TYPE=RELEASE -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON .
     - nmake
@@ -43,7 +43,7 @@ install:
 
 build_script:
     # Run tests
-    - .\test\main
+    - .\test\unit-tests
     - python test\Cartesian2d.py
     - python test\compare_versions\Cartesian2d_generate.py
     - python test\compare_versions\Cartesian2d_check_master.py
