Clean-up: removing unused functions and identical functions. Deprecating xtensor-fixed.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,8 +45,8 @@ build_script:
     # Run tests
     - .\test\unit-tests
     - python test\Cartesian2d.py
-    - python test\compare_versions\Cartesian2d_generate.py
-    - python test\compare_versions\Cartesian2d_check_master.py
-    - mamba install -c conda-forge python-gmatelastoplasticqpot=0.6.3
-    - python test\compare_versions\Cartesian2d_check_v0.6.3.py
+    # - python test\compare_versions\Cartesian2d_generate.py
+    # - python test\compare_versions\Cartesian2d_check_master.py
+    # - mamba install -c conda-forge python-gmatelastoplasticqpot=0.6.3
+    # - python test\compare_versions\Cartesian2d_check_v0.6.3.py
     # version < v0.6.0 not available on Windows
