--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,13 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         python test/compare_versions/Cartesian2d_generate.py
-        python test/compare_versions/Cartesian2d_check_master.py
+        python test/compare_versions/Cartesian2d_check_main.py
+
+    - name: Check consistency with v0.7.0
+      if: runner.os == 'Linux'
+      run: |
+        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.7.0
+        python test/compare_versions/Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.6.3
       if: runner.os == 'Linux'
@@ -85,13 +91,13 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.4.0
-        python test/compare_versions/Cartesian2d_check_v0.4.0.py
+        python test/compare_versions/Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.3.0
       if: runner.os == 'Linux'
       run: |
         conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.3.0
-        python test/compare_versions/Cartesian2d_check_v0.3.0.py
+        python test/compare_versions/Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.2.2
       if: runner.os == 'Linux'
