--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,18 @@ jobs:
       fail-fast: false
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - runs-on: ubuntu-latest
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
+            prop: tests & examples
+          - runs-on: macos-latest
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
+            conda: environment_no-examples.yaml
+            prop: tests
+          - runs-on: windows-latest
+            config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
+            conda: environment_no-examples.yaml
+            prop: tests
 
     defaults:
       run:
@@ -38,18 +50,10 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
-    - name: Extending conda environment for testing
-      run: conda env update --file environment_test.yaml
+    - name: Configure using CMake
+      run: cmake . ${{ matrix.config }}
 
-    - name: Configure using CMake (also compile examples)
-      if: runner.os == 'Linux'
-      run: cmake . -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1
-
-    - name: Configure using CMake (without examples)
-      if: runner.os != 'Linux'
-      run: cmake . -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
-
-    - name: Build C++ tests & examples
+    - name: Build C++ (${{ matrix.prop }})
       run: cmake --build .
 
     - name: Run C++ tests
