--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,24 @@
-
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.1..3.19)
 
 # Basic settings
 # ==============
 
 project(GMatElastoPlasticQPot)
 
-option(BUILD_TESTS "${PROJECT_NAME} Build tests" OFF)
-option(BUILD_EXAMPLES "${PROJECT_NAME} Build examples" OFF)
+option(BUILD_TESTS "${PROJECT_NAME}: Build tests" OFF)
+option(BUILD_EXAMPLES "${PROJECT_NAME}: Build examples" OFF)
+option(BUILD_DOCS "${PROJECT_NAME}: Build docs" OFF)
 
 # Version
 # =======
 
-file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/include/GMatElastoPlasticQPot/config.h" _GMAT_ver
-     REGEX "#define GMATELASTOPLASTICQPOT_VERSION_(MAJOR|MINOR|PATCH)")
+execute_process(
+    COMMAND python -c "from setuptools_scm import get_version; print(get_version())"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-foreach(ver ${_GMAT_ver})
-    if(ver MATCHES "#define GMATELASTOPLASTICQPOT_VERSION_(MAJOR|MINOR|PATCH) +([^ ]+)$")
-        set(_GMAT_VERSION_${CMAKE_MATCH_1} "${CMAKE_MATCH_2}" CACHE INTERNAL "")
-    endif()
-endforeach()
-
-set(_GMAT_VERSION ${_GMAT_VERSION_MAJOR}.${_GMAT_VERSION_MINOR}.${_GMAT_VERSION_PATCH})
-
-message(STATUS "Building GMatElastoPlasticQPot v${_GMAT_VERSION}")
+message(STATUS "Building ${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")
 
 # Set target
 # ==========
@@ -32,13 +27,13 @@ find_package(xtensor REQUIRED)
 find_package(GMatTensor REQUIRED)
 find_package(QPot REQUIRED)
 
-add_library(GMatElastoPlasticQPot INTERFACE)
+add_library(${PROJECT_NAME} INTERFACE)
 
-target_include_directories(GMatElastoPlasticQPot INTERFACE
+target_include_directories(${PROJECT_NAME} INTERFACE
     $<INSTALL_INTERFACE:include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
-target_link_libraries(GMatElastoPlasticQPot INTERFACE xtensor QPot GMatTensor)
+target_link_libraries(${PROJECT_NAME} INTERFACE xtensor QPot GMatTensor)
 
 # Installation
 # ============
@@ -48,46 +43,99 @@ include(GNUInstallDirs)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/" DESTINATION include)
 
-install(TARGETS GMatElastoPlasticQPot EXPORT GMatElastoPlasticQPot-targets)
+configure_file("include/${PROJECT_NAME}/version.h"
+               "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+                @ONLY)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/version.h"
+        DESTINATION "include/${PROJECT_NAME}/")
+
+install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets)
 
 install(
-    EXPORT GMatElastoPlasticQPot-targets
-    FILE GMatElastoPlasticQPotTargets.cmake
-    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/GMatElastoPlasticQPot")
+    EXPORT ${PROJECT_NAME}-targets
+    FILE "${PROJECT_NAME}Targets.cmake"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
-set(_GMAT ${CMAKE_SIZEOF_VOID_P})
+set(_${PROJECT_NAME} ${CMAKE_SIZEOF_VOID_P})
 unset(CMAKE_SIZEOF_VOID_P)
 
 write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPotConfigVersion.cmake"
-    VERSION ${_GMAT_VERSION}
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Version.cmake"
+    VERSION ${${PROJECT_NAME}_VERSION}
     COMPATIBILITY AnyNewerVersion)
 
-set(CMAKE_SIZEOF_VOID_P ${_GMAT})
+set(CMAKE_SIZEOF_VOID_P ${_${PROJECT_NAME}})
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/GMatElastoPlasticQPotConfig.cmake"
-              "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPotConfigVersion.cmake"
-        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/GMatElastoPlasticQPot")
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}Config.cmake"
+              "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+        DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GMatElastoPlasticQPot.pc.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPot.pc" @ONLY)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc.in"
+               "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc" @ONLY)
 
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/GMatElastoPlasticQPot.pc"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
         DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
 
 # Add builds
 # ==========
 
-include("GMatElastoPlasticQPotConfig.cmake")
-
-set(CTEST_TEST_TARGET_ALIAS RUN_ALL_TESTS)
+include("${PROJECT_NAME}Config.cmake")
 include(CTest)
+
+# Tests
 
 if(BUILD_TESTS)
     enable_testing()
     add_subdirectory(test)
 endif()
 
+# Examples
+
 if(BUILD_EXAMPLES)
     add_subdirectory(examples)
+endif()
+
+# Build docs: include dependencies
+
+if(BUILD_DOCS)
+    find_package(Doxygen REQUIRED)
+    find_package(GMatTensor REQUIRED)
+
+    get_target_property(QPot_INCLUDE QPot INTERFACE_INCLUDE_DIRECTORIES)
+    get_target_property(GMatTensor_INCLUDE GMatTensor INTERFACE_INCLUDE_DIRECTORIES)
+
+    set(DOXYGEN_EXCLUDE_SYMBOLS detail)
+    set(DOXYGEN_CASE_SENSE_NAMES YES)
+    set(DOXYGEN_USE_MATHJAX YES)
+    set(DOXYGEN_GENERATE_TREEVIEW YES)
+    set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
+    set(DOXYGEN_MACRO_EXPANSION YES)
+    set(DOXYGEN_SOURCE_BROWSER YES)
+    set(DOXYGEN_QUIET YES)
+    set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
+
+    set(DOXYGEN_HTML_EXTRA_STYLESHEET
+        "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/doxygen-awesome.css"
+        "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/custom.css")
+
+    set(DOXYGEN_ALIASES
+        "rst=\\verbatim embed:rst:leading-asterisk"
+        "endrst=\\endverbatim"
+        "license=@par License:")
+
+    set(DOXYGEN_STRIP_FROM_INC_PATH
+        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+        "${QPot_INCLUDE}"
+        "${GMatTensor_INCLUDE}")
+
+    set(DOXYGEN_STRIP_FROM_PATH
+        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+        "${QPot_INCLUDE}"
+        "${GMatTensor_INCLUDE}")
+
+    doxygen_add_docs(docs
+        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+        "${QPot_INCLUDE}/QPot"
+        "${GMatTensor_INCLUDE}/GMatTensor")
 endif()
