--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,9 @@ jobs:
   default-shell:
 
     strategy:
+
       fail-fast: false
+
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
@@ -21,11 +23,9 @@ jobs:
             prop: tests & examples
           - runs-on: macos-latest
             config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
-            conda: environment_no-examples.yaml
             prop: tests
           - runs-on: windows-latest
             config: -DBUILD_TESTS=1 -DBUILD_EXAMPLES=0
-            conda: environment_no-examples.yaml
             prop: tests
 
     defaults:
@@ -40,7 +40,15 @@ jobs:
     - name: Basic GitHub action setup
       uses: actions/checkout@v2
 
-    - name: Set conda environment "test"
+    - name: Set conda environment
+      if: runner.os != 'Windows'
+      uses: mamba-org/provision-with-micromamba@main
+      with:
+        environment-file: environment.yaml
+        environment-name: myenv
+
+    - name: Set conda environment
+      if: runner.os == 'Windows'
       uses: conda-incubator/setup-miniconda@v2
       with:
         mamba-version: "*"
@@ -50,14 +58,21 @@ jobs:
         activate-environment: test
         auto-activate-base: false
 
-    - name: Configure using CMake
+    - name: Configure using CMake (!Windows)
+      if: runner.os != 'Windows'
       run: cmake . ${{ matrix.config }}
 
-    - name: Build C++ (${{ matrix.prop }})
+    - name: Configure using CMake (Windows)
+      if: runner.os == 'Windows'
+      run: |
+        conda install -c conda-forge clang_win-64 ninja
+        cmake . -G Ninja ${{ matrix.config }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+
+    - name: Build C++ ${{ matrix.prop }}
       run: cmake --build .
 
-    - name: Run C++ tests
-      run: cmake --build . --target "RUN_ALL_TESTS"
+    - name: Run C++ ${{ matrix.prop }}
+      run: ctest --output-on-failure
 
     - name: Build and install Python module
       run: |
