--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,22 +39,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set conda environment
-      if: runner.os != 'Windows'
       uses: mamba-org/provision-with-micromamba@main
       with:
-        environment-file: environment.yaml
+        environment-file: ${{ matrix.conda }}
         environment-name: myenv
-
-    - name: Set conda environment
-      if: runner.os == 'Windows'
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        mamba-version: "*"
-        channels: conda-forge,defaults
-        channel-priority: true
-        environment-file: environment.yaml
-        activate-environment: myenv
-        auto-activate-base: false
 
     - name: Set dummy version
       run: echo "SETUPTOOLS_SCM_PRETEND_VERSION=ci" >> $GITHUB_ENV
@@ -66,7 +54,7 @@ jobs:
     - name: Configure using CMake (Windows)
       if: runner.os == 'Windows'
       run: |
-        conda install -c conda-forge clang_win-64 ninja
+        micromamba install -c conda-forge clang_win-64 ninja
         cmake -Bbuild -G Ninja ${{ matrix.config }} -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
 
     - name: Build C++ ${{ matrix.prop }}
@@ -78,9 +66,7 @@ jobs:
       run: ctest --output-on-failure
 
     - name: Build and install Python module
-      run: |
-        python setup.py build
-        python setup.py install
+      run: python -m pip install . -vvv
 
     - name: Run Python tests
       working-directory: test
@@ -97,56 +83,56 @@ jobs:
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.9.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.9.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.8.0
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.8.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.8.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.7.0
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.7.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.7.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.6.3
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.6.3
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.6.3
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.5.0
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.5.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.5.0
         python Cartesian2d_check_v0.5.0.py
 
     - name: Check consistency with v0.4.0
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.4.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.4.0
         python Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.3.0
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.3.0
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.3.0
         python Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.2.2
       if: runner.os == 'Linux'
       working-directory: test/compare_versions
       run: |
-        conda install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.2.2
+        micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.2.2
         python Cartesian2d_check_v0.2.2.py
 
     - name: Build doxygen-docs
