--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,25 @@
-cmake_minimum_required(VERSION 3.1..3.19)
+cmake_minimum_required(VERSION 3.18..3.20)
 
 # Basic settings
 # ==============
 
 project(GMatElastoPlasticQPot)
 
+option(BUILD_ALL "${PROJECT_NAME}: Build tests, Python API & docs" OFF)
 option(BUILD_TESTS "${PROJECT_NAME}: Build tests" OFF)
 option(BUILD_EXAMPLES "${PROJECT_NAME}: Build examples" OFF)
+option(BUILD_PYTHON "${PROJECT_NAME}: Build Python API" OFF)
 option(BUILD_DOCS "${PROJECT_NAME}: Build docs" OFF)
-
-# Version
-# =======
 
 execute_process(
     COMMAND python -c "from setuptools_scm import get_version; print(get_version())"
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION
+    OUTPUT_VARIABLE PROJECT_VERSION
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-message(STATUS "Building ${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")
+message(STATUS "Building ${PROJECT_NAME} ${PROJECT_VERSION}")
+
+string(TOUPPER "${PROJECT_NAME}" PROJECT_NAME_UPPER)
 
 # Set target
 # ==========
@@ -34,6 +35,9 @@ target_include_directories(${PROJECT_NAME} INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 
 target_link_libraries(${PROJECT_NAME} INTERFACE xtensor QPot GMatTensor)
+
+target_compile_definitions(${PROJECT_NAME} INTERFACE
+    ${PROJECT_NAME_UPPER}_VERSION="${PROJECT_VERSION}")
 
 # Installation
 # ============
@@ -57,15 +61,15 @@ install(
     FILE "${PROJECT_NAME}Targets.cmake"
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
 
-set(_${PROJECT_NAME} ${CMAKE_SIZEOF_VOID_P})
+set(${PROJECT_NAME}_TMP ${CMAKE_SIZEOF_VOID_P})
 unset(CMAKE_SIZEOF_VOID_P)
 
 write_basic_package_version_file(
     "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
-    VERSION "${${PROJECT_NAME}_VERSION}"
+    VERSION "${PROJECT_VERSION}"
     COMPATIBILITY AnyNewerVersion)
 
-set(CMAKE_SIZEOF_VOID_P ${_${PROJECT_NAME}})
+set(CMAKE_SIZEOF_VOID_P ${${PROJECT_NAME}_TMP})
 
 install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}Config.cmake"
               "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
@@ -85,18 +89,39 @@ include(CTest)
 
 # Tests
 
-if(BUILD_TESTS)
+if(BUILD_TESTS OR BUILD_ALL)
     enable_testing()
     add_subdirectory(test)
 endif()
 
 # Examples
 
-if(BUILD_EXAMPLES)
+if(BUILD_EXAMPLES OR BUILD_ALL)
     add_subdirectory(examples)
 endif()
 
-# Build docs: include dependencies
+# Python API
+
+if(BUILD_PYTHON OR BUILD_ALL)
+    find_package(Python REQUIRED COMPONENTS Interpreter Development NumPy)
+    find_package(pybind11 REQUIRED CONFIG)
+    find_package(xtensor-python REQUIRED)
+    if (WIN32)
+    find_package(pyxtensor REQUIRED)
+    endif()
+
+    pybind11_add_module(mypymod python/main.cpp)
+    set_target_properties(mypymod PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
+    if (WIN32)
+    target_link_libraries(mypymod PUBLIC ${PROJECT_NAME} pybind11::module Python::NumPy xtensor-python pyxtensor)
+    else()
+    target_link_libraries(mypymod PUBLIC ${PROJECT_NAME} pybind11::module Python::NumPy xtensor-python)
+    endif()
+
+    target_compile_definitions(mypymod PRIVATE VERSION_INFO=${PROJECT_VERSION})
+endif()
+
+# Documentation
 
 if(BUILD_DOCS)
     find_package(Doxygen REQUIRED)
@@ -136,15 +161,13 @@ if(BUILD_DOCS)
     set(DOXYGEN_SOURCE_BROWSER YES)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
+    set(DOXYGEN_WARN_AS_ERROR YES)
+    set(DOXYGEN_ALIASES "license=@par License:")
+    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")
 
     set(DOXYGEN_HTML_EXTRA_STYLESHEET
         "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/doxygen-awesome.css"
         "${CMAKE_CURRENT_SOURCE_DIR}/docs/doxystyle/custom.css")
-
-    set(DOXYGEN_ALIASES
-        "rst=\\verbatim embed:rst:leading-asterisk"
-        "endrst=\\endverbatim"
-        "license=@par License:")
 
     set(DOXYGEN_STRIP_FROM_INC_PATH ${${PROJECT_NAME}_DOCS_STRIP_INC})
     set(DOXYGEN_STRIP_FROM_PATH ${${PROJECT_NAME}_DOCS_STRIP})
