--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,68 +69,68 @@ jobs:
       run: python -m pip install . -vvv
 
     - name: Run Python tests
-      working-directory: test
+      working-directory: tests
       run: python Cartesian2d.py
 
     - name: Generate consistency data based on current commit
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         python Cartesian2d_generate.py
         python Cartesian2d_check_main.py
 
     - name: Check consistency with v0.9.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.9.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.8.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.8.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.7.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.7.0
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.6.3
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.6.3
         python Cartesian2d_check_v0.6.3.py
 
     - name: Check consistency with v0.5.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.5.0
         python Cartesian2d_check_v0.5.0.py
 
     - name: Check consistency with v0.4.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.4.0
         python Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.3.0
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.3.0
         python Cartesian2d_check_v0.2.2.py
 
     - name: Check consistency with v0.2.2
       if: runner.os == 'Linux'
-      working-directory: test/compare_versions
+      working-directory: tests/compare_versions
       run: |
         micromamba install -c conda-forge python=3.8.5 python-gmatelastoplasticqpot=0.2.2
         python Cartesian2d_check_v0.2.2.py
