--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,8 +35,12 @@ if(USE_SIMD)
     message(STATUS "Compiling ${MYPROJECT} with hardware optimization")
 endif()
 
-set(myexec "frozen_sequence")
-set(mysource "frozen_sequence/main.cpp")
-add_executable(${myexec} ${mysource})
-target_link_libraries(${myexec} PRIVATE mytarget)
-add_test(NAME ${myexec} COMMAND ${myexec})
+file(GLOB APP_SOURCES *.cpp)
+
+foreach(mysource ${APP_SOURCES})
+    string(REPLACE ".cpp" "" myexec ${mysource})
+    get_filename_component(myexec ${myexec} NAME)
+    add_executable(${myexec} ${mysource})
+    target_link_libraries(${myexec} PRIVATE mytarget)
+    add_test(NAME ${myexec} COMMAND ${myexec})
+endforeach()
