--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       run: ctest --output-on-failure
 
     - name: Build and install Python module
-      run: python -m pip install . -vvv
+      run: python setup.py install --build-type Release -vv
 
     - name: Run Python tests
       working-directory: tests
