--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: ^python/GMatElastoPlasticQPot/.*.py
 repos:
 - repo: https://github.com/psf/black
   rev: 21.8b0
@@ -9,24 +10,36 @@ repos:
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
-  # - id: check-yaml
+  - id: check-yaml
   - id: debug-statements
-- repo: https://github.com/PyCQA/flake8
-  rev: 3.9.2
+- repo: https://github.com/humitos/mirrors-autoflake.git
+  rev: v1.1
   hooks:
-  - id: flake8
-    args: [--max-line-length=100]
+    - id: autoflake
+      args: ['--in-place', '--remove-all-unused-imports', '--remove-unused-variable']
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.6.0
+    hooks:
+    -   id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
   rev: v2.25.0
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
+- repo: https://github.com/PyCQA/flake8
+  rev: 3.9.2
+  hooks:
+  - id: flake8
+    args: [
+      "--max-line-length=100",
+      "--per-file-ignores=python/GMatElastoPlasticQPot/*.py:F401 tests/Cartesian2d.py:E741 tests/compare_versions/*.py:E741"
+    ]
 - repo: https://github.com/asottile/setup-cfg-fmt
   rev: v1.17.0
   hooks:
   - id: setup-cfg-fmt
 - repo: https://github.com/pocc/pre-commit-hooks
-  rev: v1.1.3
+  rev: v1.3.0
   hooks:
   - id: clang-format
     args: [-i]
