--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,17 +10,22 @@ repos:
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
-  - id: check-yaml
+  # - id: check-yaml
   - id: debug-statements
+- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+  rev: v2.1.0
+  hooks:
+  - id: pretty-format-yaml
+    args: [--autofix, --indent, '2']
 - repo: https://github.com/humitos/mirrors-autoflake.git
   rev: v1.1
   hooks:
-    - id: autoflake
-      args: ['--in-place', '--remove-all-unused-imports', '--remove-unused-variable']
--   repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.6.0
-    hooks:
-    -   id: reorder-python-imports
+  - id: autoflake
+    args: [--in-place, --remove-all-unused-imports, --remove-unused-variable]
+- repo: https://github.com/asottile/reorder_python_imports
+  rev: v2.6.0
+  hooks:
+  - id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
   rev: v2.25.0
   hooks:
@@ -30,10 +35,7 @@ repos:
   rev: 3.9.2
   hooks:
   - id: flake8
-    args: [
-      "--max-line-length=100",
-      "--per-file-ignores=python/GMatElastoPlasticQPot/*.py:F401 tests/Cartesian2d.py:E741 tests/compare_versions/*.py:E741"
-    ]
+    args: [--max-line-length=100, --per-file-ignores=python/GMatElastoPlasticQPot/*.py:F401 tests/Cartesian2d.py:E741 tests/compare_versions/*.py:E741]
 - repo: https://github.com/asottile/setup-cfg-fmt
   rev: v1.17.0
   hooks:
