--- a/environment.yaml
+++ b/environment.yaml
@@ -5,11 +5,12 @@ dependencies:
 - cmake
 - doxygen
 - gmattensor
+- goosefem
 - h5py
 - ninja
 - numpy
-- python
 - pybind11
+- python
 - python-qpot
 - qpot
 - scikit-build
