--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,42 @@
-exclude: ^python/GMatElastoPlasticQPot/.*.py
 repos:
+# - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+#   rev: v2.1.0
+#   hooks:
+#   - id: pretty-format-yaml
+#     args: [--autofix, --indent, '2']
 - repo: https://github.com/psf/black
   rev: 21.9b0
   hooks:
   - id: black
-    args: [--safe, --quiet]
+    args: [--safe, --quiet, --line-length=100]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.0.1
   hooks:
   - id: trailing-whitespace
   - id: end-of-file-fixer
-  # - id: check-yaml
+  - id: check-yaml
   - id: debug-statements
-- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.1.0
-  hooks:
-  - id: pretty-format-yaml
-    args: [--autofix, --indent, '2']
 - repo: https://github.com/humitos/mirrors-autoflake.git
   rev: v1.1
   hooks:
   - id: autoflake
-    args: [--in-place, --remove-all-unused-imports, --remove-unused-variable]
+    args: [--in-place, --remove-unused-variable]
 - repo: https://github.com/asottile/reorder_python_imports
   rev: v2.6.0
   hooks:
   - id: reorder-python-imports
 - repo: https://github.com/asottile/pyupgrade
-  rev: v2.26.0
+  rev: v2.29.0
   hooks:
   - id: pyupgrade
     args: [--py36-plus]
 - repo: https://github.com/PyCQA/flake8
-  rev: 3.9.2
+  rev: 4.0.1
   hooks:
   - id: flake8
-    args: [--max-line-length=100, --per-file-ignores=python/GMatElastoPlasticQPot/*.py:F401 tests/Cartesian2d.py:E741 tests/compare_versions/*.py:E741]
+    args: [--max-line-length=100, "--per-file-ignores=python/GMatElastoPlasticQPot/*.py:F401,F403 tests/Cartesian2d.py:E741 tests/compare_versions/*.py:E741"]
 - repo: https://github.com/asottile/setup-cfg-fmt
-  rev: v1.17.0
+  rev: v1.18.0
   hooks:
   - id: setup-cfg-fmt
 - repo: https://github.com/pocc/pre-commit-hooks
