--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
         include:
         - runs-on: ubuntu-latest
-          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1 -DBUILD_EXAMPLES=1 -DBUILD_DOCS=1
+          config: -DCMAKE_BUILD_TYPE=Release -DBUILD_ALL=1
           prop: tests, examples & docs
         - runs-on: macos-latest
           config: -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=1
