--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,10 @@ jobs:
       with:
         environment-file: environment.yaml
         environment-name: myenv
-
-    - name: Install clang
-      if: runner.os == 'Windows'
-      run: micromamba install -c conda-forge clang_win-64 ninja
+        cache-env: true
+        extra-specs: |
+          sel(linux): cxx-compiler
+          sel(win): clang_win-64
 
     - name: Set dummy version
       run: echo "SETUPTOOLS_SCM_PRETEND_VERSION=0.0" >> $GITHUB_ENV
@@ -63,7 +63,7 @@ jobs:
       run: ctest --output-on-failure
 
     - name: Build and install Python module
-      run: python setup.py install --build-type Release -vv
+      run: python -m pip install . -v
 
     - name: Run Python tests
       working-directory: tests
