--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,10 +50,17 @@ jobs:
     - name: Configure using CMake
       run: cmake -Bbuild ${{ matrix.config }}
 
-    - name: Build doxygen-docs (error on warning)
+    - name: Build doxygen-docs
       if: runner.os == 'Linux'
       working-directory: build
-      run: make html
+      run: |
+        make html
+        cat doxygen_warnings.log
+
+    - name: Require minimal documentation
+      if: runner.os == 'Linux'
+      working-directory: build
+      run: if grep -q "not documented" doxygen_warnings.log ; then exit 1; fi
 
     - name: Build and install Python module
       run: python -m pip install . -v
