docs: forcing dark theme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,6 +210,7 @@ if(BUILD_DOCS OR BUILD_ALL)
     set(DOXYGEN_QUIET YES)
     set(DOXYGEN_WARN_IF_UNDOCUMENTED YES)
     set(DOXYGEN_WARN_AS_ERROR NO)
+    set(DOXYGEN_HTML_COLORSTYLE DARK)
     set(DOXYGEN_WARN_LOGFILE "${CMAKE_CURRENT_BINARY_DIR}/doxygen_warnings.log")
     set(DOXYGEN_ALIASES "license=@par License:")
     set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "README.md")
